--- a/devfile.yaml
+++ b/devfile.yaml
@@ -14,7 +14,43 @@ components:
         - name: venv
           path: /home/user/.venv
       memoryLimit: 512Mi
+      cpuLimit: 500m
+      memoryRequest: 256Mi
+      cpuRequest: 100m
       mountSources: true
+  - name: db
+    container:
+      image: registry.redhat.io/rhel9/postgresql-15:latest
+      memoryLimit: 512Mi
+      cpuLimit: 500m
+      env:
+        - name: POSTGRESQL_USER
+          value: todouser
+        - name: POSTGRESQL_PASSWORD
+          value: todopassword
+        - name: POSTGRESQL_ADMIN_PASSWORD
+          value: adminpassword
+        - name: POSTGRESQL_DATABASE
+          value: todos
+      endpoints:
+        - name: db
+          exposure: none
+          targetPort: 5432
+  - name: adminer
+    container:
+      image: quay.io/official-images/adminer:latest
+      memoryLimit: 512Mi
+      cpuLimit: 500m
+      env:
+        - name: ADMINER_DEFAULT_SERVER
+          value: db
+        - name: ADMINER_DESIGN
+          value: nette
+      endpoints:
+        - name: db
+          exposure: public
+          targetPort: 8080
+          protocol: https
 
   - name: venv
     volume:
