--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "ms-python.python",
-        "vscodevim.vim"
+        "vscodevim.vim",
+        "pr1sm8.theme-panda"
     ]
 }
