add postgres service

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -18,24 +18,6 @@ components:
       memoryRequest: 256Mi
       cpuRequest: 100m
       mountSources: true
-  - name: db
-    container:
-      image: registry.redhat.io/rhel9/postgresql-15:latest
-      memoryLimit: 512Mi
-      cpuLimit: 500m
-      env:
-        - name: POSTGRESQL_USER
-          value: todouser
-        - name: POSTGRESQL_PASSWORD
-          value: todopassword
-        - name: POSTGRESQL_ADMIN_PASSWORD
-          value: adminpassword
-        - name: POSTGRESQL_DATABASE
-          value: todos
-      endpoints:
-        - name: dbport
-          exposure: none
-          targetPort: 5432
   - name: adminer
     container:
       image: quay.io/official-images/adminer:latest
@@ -51,6 +33,9 @@ components:
           exposure: public
           targetPort: 8080
           protocol: https
+  - name: db
+    kubernetes:
+      uri: ./kube/devspace/postgres.yaml
 
   - name: venv
     volume:
