--- a/kube/devspace/postgres.yaml
+++ b/kube/devspace/postgres.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: List
 items:
-  - apiVersion: v1
+  - apiVersion: apps/v1
     kind: Deployment
     metadata:
       name: db
