--- a/pipeline/pipeline.yaml
+++ b/pipeline/pipeline.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: djangotodo-build
+  name: djangotodos-build
 spec:
   params:
     - name: APP_SOURCE_GIT
@@ -14,7 +14,7 @@ spec:
     - name: APP_NAME
       type: string
       description: The application name
-      default: djangotodo
+      default: djangotodos
     - name: DOCKERFILE
       type: string
       description: Dockerfile location
