--- a/pipeline/django-test-task.yaml
+++ b/pipeline/django-test-task.yaml
@@ -3,13 +3,13 @@ kind: ClusterTask
 metadata:
   name: django-test
   labels:
-    app.kubernetes.io/version: "0.3"
+    app.kubernetes.io/version: "0.1"
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
-    tekton.dev/categories: Build Tools
-    tekton.dev/tags: build-tool
+    tekton.dev/categories: "Build Tools"
+    tekton.dev/tags: "build-tool, python, django"
     tekton.dev/displayName: "django test"
-    tekton.dev/platforms: "linux/amd64,linux/s390x,linux/ppc64le"
+    tekton.dev/platforms: "linux/amd64,linux/s390x,linux/ppc64le,linux/arm64"
 spec:
   description: This task runs Django tests.
   params:
