--- a/pipeline/pipeline-run.yaml
+++ b/pipeline/pipeline-run.yaml
@@ -11,6 +11,10 @@ spec:
       value: https://github.com/jkeam/djangotodos
     - name: DEV_PROJECT
       value: jkeam-dev
+    - name: FROM_EMAIL
+      value: build@example.com
+    - name: TO_EMAILS
+      value: you@example.com
   workspaces:
   - name: workspace
     volumeClaimTemplate:
