--- a/openshift/pipeline/email-server-secret.yaml
+++ b/openshift/pipeline/email-server-secret.yaml
@@ -1,11 +1,10 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  namespace: jkeam-pipeline
   name: email-server-secret
 stringData:
   url: "smtp.server.com"
   port: "587"
   user: "SMTP_Injection"
-  password: "passwordhere"
+  password: "replace-me"
   tls: "False"
