--- a/openshift/app/app-deployment.yaml
+++ b/openshift/app/app-deployment.yaml
@@ -26,6 +26,7 @@ spec:
       containers:
       - name: djangotodos
         image: quay.io/jkeam/djangotodos
+        imagePullPolicy: Always
         env:
         - name: APP_MODE
           value: "simple"
